<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <RadioGroup
            android:id="@+id/group_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/linearlayout_line"
            android:paddingHorizontal="100dp">

            <RadioButton
                android:id="@+id/radio_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/radio_0.2" />

            <RadioButton
                android:id="@+id/radio_40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/radio_0.4" />

            <RadioButton
                android:id="@+id/radio_60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/radio_0.6" />

            <RadioButton
                android:id="@+id/radio_80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:checked="true"
                android:text="@string/radio_0.8" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/group_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_jpeg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/format_jpeg" />

            <RadioButton
                android:id="@+id/radio_png"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/format_png" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:max="8"
                android:progress="8" />

            <TextView
                android:id="@+id/quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_yes_or_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_no"
                android:contentDescription="@string/yes_or_no" />

            <Button
                android:id="@+id/btn_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/btn_select"
                app:backgroundTint="#009688" />

            <Button
                android:id="@+id/btn_make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btn_make"
                app:backgroundTint="#009688" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>